few more title tweaks to prevent text overflowing into the rainbow

--- a/stylesheets/App.scss
+++ b/stylesheets/App.scss
@@ -138,9 +138,7 @@ section {
 }
 
 .outdent-1 {
-  @include only-above($medium-bp) {
-    margin-left: -1rem;
-  }
+  margin-left: -1rem;
 }
 
 .indent-1 {
